# svd_convolutions

./: README.md  pyproject.toml
svd_convolutions/: __init__.py  svd_convolutions.py
