[tool.poetry]
name = "svd_convolutions"
version = "0.1.0"
description = "A package containing the implementation of an approximate convolution algorithm"
authors = ["Petro Mozil <mozil.petryk@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
